# mahjong_ai

./: .gitignore  README.md  THIRD_PARTY_ASSETS.md  pyproject.toml  rules.markdown
src/mahjong_ai/: __init__.py  analysis.py  cli.py  game_cli.py  meld.py  shanten.py  tiles.py
src/mahjong_ai/dataset/: __init__.py  extractor.py  schema.py  writer.py
src/mahjong_ai/game/: __init__.py  ai_player.py  human_player.py  session.py
src/mahjong_ai/persistence/: __init__.py  serializer.py
src/mahjong_ai/risk/: __init__.py  cli.py  evaluation.py  features.py  model.py  observation.py
src/mahjong_ai/rl/: __init__.py  cli.py  environment.py  ppo.py  training.py
src/mahjong_ai/simulator/: __init__.py  cli.py  environment.py  logging.py  models.py  runner.py  scoring.py  strategies.py
src/mahjong_ai/state/: __init__.py  events.py  models.py  reducer.py  validation.py
src/mahjong_ai/ui/: __init__.py  game_window.py  graphics_preview.py  main_window.py  qml_game.py  qml_preview.py  tile_preview.py
src/mahjong_ai/ui/qml/: DiscardRiver.qml  FaceTile.qml  MahjongTablePreview.qml  MeldStrip.qml  OpponentHand.qml  PlayerBadge.qml  RoundGameAction.qml  TileBack3D.qml  TurnDial.qml
src/mahjong_ai/ui/widgets/: __init__.py  action_button.py  opponent_hand.py  table_widget.py  tile_widget.py  turn_indicator.py
tests/: test_analysis.py  test_game_cli.py  test_game_session.py  test_game_ui.py  test_meld.py  test_persistence.py  test_qml_game.py  test_risk.py  test_risk_observation.py  test_scoring_and_rl_env.py  test_shanten.py  test_simulator.py  test_simulator_cli.py  test_state_engine.py  test_tiles.py  test_ui_win.py
