[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mahjong-ai"
version = "0.1.0"
description = "Pure Python analysis algorithms for simplified Mahjong"
requires-python = ">=3.11"

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
mahjong-ai = "mahjong_ai.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["src"]
