[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mahjong-ai"
version = "0.6.0"
description = "Pure Python Mahjong analysis, simulation, dataset, and public-risk tooling"
requires-python = ">=3.11"

[project.optional-dependencies]
test = ["pytest>=8.0"]
ui = ["PySide6-Essentials>=6.7"]

[project.scripts]
mahjong-ai = "mahjong_ai.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["src"]
