[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mahjong-ai"
version = "0.6.0"
description = "Pure Python Mahjong analysis, simulation, dataset, and public-risk tooling"
requires-python = ">=3.11"

[project.optional-dependencies]
test = ["pytest>=8.0"]
ui = ["PySide6-Essentials>=6.7", "PySide6-Addons>=6.7"]
rl = ["torch>=2.2"]

[project.scripts]
mahjong-ai = "mahjong_ai.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mahjong_ai = [
    "assets/tiles/*.svg",
    "assets/ui/*.png",
    "assets/ui/*.svg",
    "assets/music/*.mp3",
    "ui/qml/*.qml",
]
